--- a/package.json
+++ b/package.json
@@ -38,8 +38,11 @@
     "cross-env": "^7.0.3",
     "date-fns": "^2.19.0",
     "deepmerge": "^4.2.2",
+    "dotenv": "^8.2.0",
     "easy-peasy": "^5.0.3",
     "editorjs-undo": "^0.1.4",
+    "firebase": "^8.3.1",
+    "firebase-admin": "^9.5.0",
     "formidable": "^1.2.2",
     "graphql": "^15.5.0",
     "gulp": "^4.0.2",
@@ -54,6 +57,7 @@
     "next": "^10.0.8",
     "next-auth": "^3.11.2",
     "next-dark-mode": "^3.0.0",
+    "next-firebase-auth": "^0.13.0-alpha.0",
     "next-pwa": "^5.0.6",
     "next-seo": "^4.20.0",
     "pg": "^8.5.1",
