--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "editorjs-undo": "^0.1.4",
     "firebase": "^8.3.1",
     "firebase-admin": "^9.5.0",
+    "firebaseui": "^4.8.0",
     "formidable": "^1.2.2",
     "graphql": "^15.5.0",
     "gulp": "^4.0.2",
@@ -55,7 +56,6 @@
     "less-plugin-npm-import": "^2.1.0",
     "nanoid": "^3.1.21",
     "next": "^10.0.8",
-    "next-auth": "^3.11.2",
     "next-dark-mode": "^3.0.0",
     "next-firebase-auth": "^0.13.0-alpha.0",
     "next-pwa": "^5.0.6",
@@ -67,6 +67,7 @@
     "react-cookies": "^0.1.1",
     "react-css-theme-switcher": "^0.2.2",
     "react-dom": "^17.0.1",
+    "react-firebaseui": "^4.1.0",
     "react-lazyload": "^3.2.0",
     "react-progressive-graceful-image": "^0.6.12",
     "react-share": "^4.4.0",
