--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,6 +1,11 @@
 {
-    "trailingComma": "none",
-    "tabWidth": 4,
-    "semi": true,
-    "singleQuote": true
+    "useTabs": false,
+    "printWidth": 80,
+    "tabWidth": 2,
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "jsxBracketSameLine": false,
+    "parser": "flow",
+    "noSemi": false,
+    "rcVerbose": true
 }
