--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@prisma/client": "^2.19.0",
     "@tailwindcss/typography": "^0.4.0",
     "@tinymce/tinymce-react": "^3.10.4",
+    "@types/next-auth": "^3.7.2",
     "antd": "^4.14.0",
     "apollo-link-error": "^1.1.13",
     "autoprefixer": "^10.2.5",
@@ -103,6 +104,8 @@
   },
   "homepage": "https://github.com/dukesx/Coding-Bolt#readme",
   "devDependencies": {
-    "prisma": "^2.19.0"
+    "@types/react": "^17.0.3",
+    "prisma": "^2.19.0",
+    "typescript": "^4.2.3"
   }
 }
