--- a/package.json
+++ b/package.json
@@ -104,8 +104,10 @@
   },
   "homepage": "https://github.com/dukesx/Coding-Bolt#readme",
   "devDependencies": {
+    "@types/node": "^14.14.37",
     "@types/react": "^17.0.3",
     "prisma": "^2.19.0",
+    "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   }
 }
