--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "antd": "^4.14.0",
     "apollo-link-error": "^1.1.13",
     "autoprefixer": "^10.2.5",
+    "axios": "^0.21.1",
     "babel-plugin-import": "^1.13.3",
     "cross-env": "^7.0.3",
     "date-fns": "^2.19.0",
@@ -42,7 +43,7 @@
     "dotenv": "^8.2.0",
     "easy-peasy": "^5.0.3",
     "editorjs-undo": "^0.1.4",
-    "firebase": "^8.3.1",
+    "firebase": "^8.6.7",
     "firebase-admin": "^9.5.0",
     "firebaseui": "^4.8.0",
     "formidable": "^1.2.2",
@@ -56,9 +57,9 @@
     "less": "^3.13.0",
     "less-plugin-npm-import": "^2.1.0",
     "nanoid": "^3.1.21",
-    "next": "^10.2.0",
+    "next": "^11.0.0",
     "next-dark-mode": "^3.0.0",
-    "next-firebase-auth": "^0.13.0-alpha.0",
+    "next-firebase-auth": "latest",
     "next-pwa": "^5.0.6",
     "next-seo": "^4.20.0",
     "pg": "^8.5.1",
@@ -76,7 +77,7 @@
     "remixicon": "^2.5.0",
     "sass": "^1.32.8",
     "subscriptions-transport-ws": "^0.9.18",
-    "tailwindcss": "^2.0.3",
+    "tailwindcss": "^2.2.6",
     "tailwindcss-line-clamp": "^1.0.5",
     "unsplash-js": "^7.0.4",
     "url-slug": "^3.0.1",
