--- a/package.json
+++ b/package.json
@@ -1,114 +1,74 @@
 {
-  "name": "wow-writes",
-  "version": "1.0.0",
-  "description": "The Content Management System",
-  "main": "index.js",
-  "directories": {
-    "lib": "lib"
-  },
-  "dependencies": {
-    "@apollo/client": "^3.3.11",
-    "@apollo/react-ssr": "^4.0.0",
-    "@ctrl/tinycolor": "^3.4.0",
-    "@editorjs/checklist": "^1.3.0",
-    "@editorjs/code": "^2.7.0",
-    "@editorjs/delimiter": "^1.2.0",
-    "@editorjs/header": "^2.6.1",
-    "@editorjs/image": "^2.6.0",
-    "@editorjs/inline-code": "^1.3.1",
-    "@editorjs/link": "^2.3.1",
-    "@editorjs/list": "^1.6.2",
-    "@editorjs/marker": "^1.2.2",
-    "@editorjs/paragraph": "^2.8.0",
-    "@editorjs/quote": "^2.4.0",
-    "@editorjs/simple-image": "^1.4.0",
-    "@editorjs/table": "^1.3.0",
-    "@editorjs/underline": "^1.0.0",
-    "@egjs/flicking-plugins": "^3.3.0",
-    "@egjs/react-flicking": "^3.6.0",
-    "@hcaptcha/react-hcaptcha": "^0.3.5",
-    "@next/bundle-analyzer": "^10.0.8",
-    "@prisma/client": "^2.19.0",
-    "@tailwindcss/typography": "^0.4.0",
-    "@tinymce/tinymce-react": "^3.10.4",
-    "@types/next-auth": "^3.7.2",
-    "antd": "^4.14.0",
-    "apollo-link-error": "^1.1.13",
-    "autoprefixer": "^10.2.5",
-    "axios": "^0.21.1",
-    "babel-plugin-import": "^1.13.3",
-    "cross-env": "^7.0.3",
-    "date-fns": "^2.19.0",
-    "deepmerge": "^4.2.2",
-    "dotenv": "^8.2.0",
-    "easy-peasy": "^5.0.3",
-    "editorjs-undo": "^0.1.4",
-    "firebase": "^8.6.7",
-    "firebase-admin": "^9.5.0",
-    "firebaseui": "^4.8.0",
-    "formidable": "^1.2.2",
-    "graphql": "^15.5.0",
-    "gulp": "^4.0.2",
-    "gulp-csso": "^4.0.1",
-    "gulp-debug": "^4.0.0",
-    "gulp-less": "^4.0.1",
-    "gulp-postcss": "^9.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "less": "^3.13.0",
-    "less-plugin-npm-import": "^2.1.0",
-    "nanoid": "^3.1.21",
-    "next": "^11.0.0",
-    "next-dark-mode": "^3.0.0",
-    "next-firebase-auth": "latest",
-    "next-pwa": "^5.0.6",
-    "next-seo": "^4.20.0",
-    "pg": "^8.5.1",
-    "postcss": "^8.2.8",
-    "postcss-preset-env": "^6.7.0",
-    "react": "^17.0.1",
-    "react-cookies": "^0.1.1",
-    "react-css-theme-switcher": "^0.2.2",
-    "react-dom": "^17.0.1",
-    "react-firebaseui": "^4.1.0",
-    "react-lazyload": "^3.2.0",
-    "react-progressive-graceful-image": "^0.6.12",
-    "react-share": "^4.4.0",
-    "react-stickynode": "^3.0.5",
-    "remixicon": "^2.5.0",
-    "sass": "^1.32.8",
-    "subscriptions-transport-ws": "^0.9.18",
-    "tailwindcss": "^2.2.6",
-    "tailwindcss-line-clamp": "^1.0.5",
-    "unsplash-js": "^7.0.4",
-    "url-slug": "^3.0.1",
-    "use-dark-mode": "^2.3.1"
-  },
+  "name": "coding-bolt",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "gulp": "npx gulp less"
+    "lint": "next lint"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dukesx/Coding-Bolt.git"
-  },
-  "keywords": [
-    "cms",
-    "writing",
-    "medium"
-  ],
-  "author": "Afridi",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/dukesx/Coding-Bolt/issues"
-  },
-  "homepage": "https://github.com/dukesx/Coding-Bolt#readme",
-  "devDependencies": {
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.3",
-    "prisma": "^2.19.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.3"
+  "dependencies": {
+    "@graphql-codegen/typescript-urql": "^2.0.11",
+    "@next/bundle-analyzer": "^10.1.3",
+    "@tailwindcss/aspect-ratio": "^0.2.1",
+    "@tailwindcss/typography": "^0.4.1",
+    "@tanem/react-nprogress": "^3.0.75",
+    "@types/validator": "^13.6.3",
+    "@urql/exchange-graphcache": "^4.2.1",
+    "boring-avatars": "^1.5.8",
+    "cleave.js": "^1.6.0",
+    "lightgallery": "^2.1.8",
+    "next-urql": "^3.1.1",
+    "@egjs/flicking-plugins": "^4.2.0",
+    "@egjs/react-flicking": "^3.7.3",
+    "@hcaptcha/react-hcaptcha": "^0.3.7",
+    "antd": "^4.16.11",
+    "auto-prefixer": "^0.4.2",
+    "crossenv": "^0.0.2-security",
+    "date-fns": "^2.23.0",
+    "dotenv": "^10.0.0",
+    "graphql": "^15.5.1",
+    "gulp": "^4.0.2",
+    "react-beautiful-dnd": "^13.1.0",
+    "tailwindcss-line-clamp": "^1.0.5",
+    "typescript-plugin-css-modules": "^3.2.0",
+    "urql": "^2.0.4",
+    "urql-persisted-queries": "^0.1.0",
+    "@editorjs/footnotes": "^1.0.0",
+    "@editorjs/link-autocomplete": "0.0.0",
+    "@types/node": "^14.14.39",
+    "@types/react": "^17.0.15",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "copy-webpack-plugin": "^6.3.2",
+    "eslint": "^7.24.0",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prefer-object-spread": "^1.2.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "iniparser": "^1.0.5",
+    "null-loader": "^4.0.1",
+    "prettier": "^2.2.1",
+    "tailwindcss-tooltip-arrow-after": "^1.0.0",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.2.4",
+    "gulp-csso": "^4.0.1",
+    "gulp-debug": "^3.2.0",
+    "gulp-less": "^5.0.0",
+    "gulp-postcss": "^9.0.0",
+    "less": "^4.1.1",
+    "less-plugin-import": "^1.0.0",
+    "next": "11.1.0",
+    "next-firebase-auth": "^0.13.3-alpha.1",
+    "next-pwa": "^5.2.24",
+    "next-seo": "^4.26.0",
+    "postcss": "^8.3.6",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "sass": "^1.37.5",
+    "tailwindcss": "^2.2.7"
   }
 }
