--- a/package.json
+++ b/package.json
@@ -6,42 +6,58 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@editorjs/footnotes": "^1.0.0",
+    "@editorjs/link-autocomplete": "0.0.0",
+    "@egjs/flicking-plugins": "^4.2.0",
+    "@egjs/react-flicking": "^3.7.3",
     "@graphql-codegen/typescript-urql": "^2.0.11",
+    "@hcaptcha/react-hcaptcha": "^0.3.7",
     "@next/bundle-analyzer": "^10.1.3",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
     "@tanem/react-nprogress": "^3.0.75",
-    "@types/validator": "^13.6.3",
     "@urql/exchange-graphcache": "^4.2.1",
+    "antd": "^4.16.11",
     "boring-avatars": "^1.5.8",
     "cleave.js": "^1.6.0",
-    "lightgallery": "^2.1.8",
-    "next-urql": "^3.1.1",
-    "@egjs/flicking-plugins": "^4.2.0",
-    "@egjs/react-flicking": "^3.7.3",
-    "@hcaptcha/react-hcaptcha": "^0.3.7",
-    "antd": "^4.16.11",
-    "auto-prefixer": "^0.4.2",
     "crossenv": "^0.0.2-security",
     "date-fns": "^2.23.0",
-    "dotenv": "^10.0.0",
     "graphql": "^15.5.1",
-    "gulp": "^4.0.2",
+    "lightgallery": "^2.1.8",
+    "next": "11.1.0",
+    "next-firebase-auth": "^0.13.3-alpha.1",
+    "next-pwa": "^5.2.24",
+    "next-seo": "^4.26.0",
+    "next-urql": "^3.1.1",
+    "prettier": "^2.2.1",
+    "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-dom": "17.0.2",
+    "tailwindcss": "^2.2.7",
     "tailwindcss-line-clamp": "^1.0.5",
-    "typescript-plugin-css-modules": "^3.2.0",
+    "tailwindcss-tooltip-arrow-after": "^1.0.0",
     "urql": "^2.0.4",
-    "urql-persisted-queries": "^0.1.0",
-    "@editorjs/footnotes": "^1.0.0",
-    "@editorjs/link-autocomplete": "0.0.0",
+    "urql-persisted-queries": "^0.1.0"
+  },
+  "devDependencies": {
+    "@testing-library/dom": "^8.1.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^26.0.24",
     "@types/node": "^14.14.39",
     "@types/react": "^17.0.15",
+    "@types/validator": "^13.6.3",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
-    "copy-webpack-plugin": "^6.3.2",
+    "autoprefixer": "^10.3.1",
+    "babel-jest": "^27.0.6",
+    "dotenv": "^10.0.0",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -49,26 +65,22 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "iniparser": "^1.0.5",
-    "null-loader": "^4.0.1",
-    "prettier": "^2.2.1",
-    "tailwindcss-tooltip-arrow-after": "^1.0.0",
-    "ts-node": "^10.1.0",
-    "typescript": "^4.2.4",
+    "gulp": "^4.0.2",
     "gulp-csso": "^4.0.1",
     "gulp-debug": "^3.2.0",
     "gulp-less": "^5.0.0",
     "gulp-postcss": "^9.0.0",
+    "iniparser": "^1.0.5",
+    "jest": "^27.0.6",
     "less": "^4.1.1",
     "less-plugin-import": "^1.0.0",
-    "next": "11.1.0",
-    "next-firebase-auth": "^0.13.3-alpha.1",
-    "next-pwa": "^5.2.24",
-    "next-seo": "^4.26.0",
+    "null-loader": "^4.0.1",
     "postcss": "^8.3.6",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react-test-renderer": "^17.0.2",
     "sass": "^1.37.5",
-    "tailwindcss": "^2.2.7"
+    "ts-jest": "^27.0.4",
+    "ts-node": "^10.1.0",
+    "typescript": "^4.3.5",
+    "typescript-plugin-css-modules": "^3.2.0"
   }
 }
