--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "baseUrl": ".",
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "__tests__/indexTest.js"],
   "exclude": ["node_modules"]
 }
