--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,5 +19,7 @@ jobs:
           paths:
             - ./node_modules
       - run:
-          name: Run tests
+          name: Run Jest and Collect Coverage Reports
           command: npm run test
+      - store_artifacts:
+          path: coverage
