--- a/package.json
+++ b/package.json
@@ -35,12 +35,10 @@
     "next-firebase-auth": "^0.13.3-alpha.1",
     "next-pwa": "^5.2.24",
     "next-seo": "^4.26.0",
-    "next-themes": "^0.0.15",
     "next-urql": "^3.1.1",
     "prettier": "^2.2.1",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
-    "react-css-theme-switcher": "^0.3.0",
     "react-dom": "17.0.2",
     "tailwindcss": "^2.2.7",
     "tailwindcss-line-clamp": "^1.0.5",
@@ -76,6 +74,7 @@
     "gulp-debug": "^3.2.0",
     "gulp-less": "^5.0.0",
     "gulp-postcss": "^9.0.0",
+    "identity-obj-proxy": "^3.0.0",
     "iniparser": "^1.0.5",
     "jest": "^27.0.6",
     "less": "^4.1.1",
