--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ yarn-error.log
 # Files in here are copied by the build
 public/themes
 
+# Ignore Coverage
+coverage/
+
+#
 node_modules
 .next
 .waypoint
