--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,11 @@
-name: Build and Deployment
+name: Build and Push
 
 on:
   pull_request:
     types: [closed]
 
 jobs:
-  merge_job:
+  Build and Push Image:
     # this job will only run if the PR has been merged
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
