--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "prettier": "^2.2.1",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-css-theme-switcher": "^0.3.0",
     "react-dom": "17.0.2",
     "tailwindcss": "^2.2.7",
     "tailwindcss-line-clamp": "^1.0.5",
