fixed deploy issue

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deployment
 on:
   workflow_run:
     workflows:
-      - Build and Push to Docker
+      - Build
     types:
       - completed
 
