--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "css-loader": "^6.2.0",
     "dotenv": "^10.0.0",
     "eslint": "^7.24.0",
+    "eslint-config-next": "11.1.0",
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prefer-object-spread": "^1.2.1",
