--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,14 +18,14 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push
-        env:
-          FIREBASE_PRIVATE_KEY: ${{secrets.FIREBASE_PRIVATE_KEY}}
-          COOKIE_SECRET_CURRENT: ${{secrets.COOKIE_SECRET_CURRENT}}
-          COOKIE_SECRET_PREVIOUS: ${{secrets.COOKIE_SECRET_PREVIOUS}}
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
           tags: codingbolt/app:latest
+          build-args: |
+          FIREBASE_PRIVATE_KEY: ${{secrets.FIREBASE_PRIVATE_KEY}}
+          COOKIE_SECRET_CURRENT: ${{secrets.COOKIE_SECRET_CURRENT}}
+          COOKIE_SECRET_PREVIOUS: ${{secrets.COOKIE_SECRET_PREVIOUS}}
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
