--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,13 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
+      - name: Make envfile
+      uses: SpicyPizza/create-envfile@v1
+      with:
+        envkey_FIREBASE_PRIVATE_KEY=${{ secrets.FIREBASE_PRIVATE_KEY }}
+        envkey_COOKIE_SECRET_CURRENT=${{ secrets.COOKIE_SECRET_CURRENT }}
+        envkey_COOKIE_SECRET_PREVIOUS=${{ secrets.COOKIE_SECRET_PREVIOUS }}
+        file_name: .env
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
