--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,11 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Make envfile
-      uses: SpicyPizza/create-envfile@v1
-      with:
-        envkey_FIREBASE_PRIVATE_KEY=${{ secrets.FIREBASE_PRIVATE_KEY }}
-        envkey_COOKIE_SECRET_CURRENT=${{ secrets.COOKIE_SECRET_CURRENT }}
-        envkey_COOKIE_SECRET_PREVIOUS=${{ secrets.COOKIE_SECRET_PREVIOUS }}
+        uses: SpicyPizza/create-envfile@v1
+        with:
+          envkey_FIREBASE_PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
+          envkey_COOKIE_SECRET_CURRENT: ${{ secrets.COOKIE_SECRET_CURRENT }}
+          envkey_COOKIE_SECRET_PREVIOUS: ${{ secrets.COOKIE_SECRET_PREVIOUS }}
         file_name: .env
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
