--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
           envkey_FIREBASE_PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
           envkey_COOKIE_SECRET_CURRENT: ${{ secrets.COOKIE_SECRET_CURRENT }}
           envkey_COOKIE_SECRET_PREVIOUS: ${{ secrets.COOKIE_SECRET_PREVIOUS }}
+          directory: secrets
           file_name: .env
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
