--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,12 +17,14 @@ jobs:
       COOKIE_SECRET_CURRENT: ${{ secrets.COOKIE_SECRET_CURRENT }}
       COOKIE_SECRET_PREVIOUS: ${{ secrets.COOKIE_SECRET_PREVIOUS }}
     steps:
-      - name: Build Next JS
+      - name: Use Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
-          cache: "npm"
-      - run: npm run build
+          node-version: "14.x"
+      - name: Install dependencies
+        run: npm install
+      - name: Build Next JS
+        run: npm run build
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
