--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,15 +33,22 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
+      - name: Build & push Docker image
         with:
-          push: true
-          tags: codingbolt/app:latest
-          secrets: |
-            "FIREBASE_PRIVATE_KEY=${{ secrets.FIREBASE_PRIVATE_KEY }}"
-            "COOKIE_SECRET_CURRENT=${{ secrets.COOKIE_SECRET_CURRENT }}"
-            "COOKIE_SECRET_PREVIOUS=${{ secrets.COOKIE_SECRET_PREVIOUS }}"
-      - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+          image: codingbolt/app
+          tags: latest
+          registry: docker.io
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      # - name: Build and push
+      #   id: docker_build
+      #   uses: docker/build-push-action@v2
+      #   with:
+      #     push: true
+      #     tags: codingbolt/app:latest
+      #     secrets: |
+      #       "FIREBASE_PRIVATE_KEY=${{ secrets.FIREBASE_PRIVATE_KEY }}"
+      #       "COOKIE_SECRET_CURRENT=${{ secrets.COOKIE_SECRET_CURRENT }}"
+      #       "COOKIE_SECRET_PREVIOUS=${{ secrets.COOKIE_SECRET_PREVIOUS }}"
+      # - name: Image digest
+      #   run: echo ${{ steps.docker_build.outputs.digest }}
