--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next-pwa": "^5.2.24",
     "next-seo": "^4.26.0",
     "next-urql": "^3.1.1",
+    "phosphor-react": "^1.3.1",
     "prettier": "^2.2.1",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
