--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,12 +4,12 @@ jobs:
   build:
     working_directory: ~/repo
     docker:
-      - image: circleci/node:14.17.5
+      - image: circleci/node:16.7.0
     steps:
       - checkout
-      - run:
-          name: Update NPM
-          command: "sudo npm install -g npm@5"
+      # - run:
+      #     name: Update NPM
+      #     command: "sudo npm install -g npm"
       - restore_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
