--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
     "prettier": "^2.2.1",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
+    "react-css-theme-switcher": "^0.3.0",
     "react-dom": "17.0.2",
     "react-firebaseui": "^5.0.2",
-    "tailwindcss": "^2.2.7",
     "tailwindcss-line-clamp": "^1.0.5",
     "tailwindcss-tooltip-arrow-after": "^1.0.0",
     "urql": "^2.0.4",
@@ -63,7 +63,7 @@
     "@types/validator": "^13.6.3",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
-    "autoprefixer": "^10.3.1",
+    "autoprefixer": "^10.3.2",
     "babel-jest": "^27.0.6",
     "css-loader": "^6.2.0",
     "dotenv": "^10.0.0",
@@ -75,7 +75,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "gulp": "^4.0.2",
+    "gulp": "^3.9.1",
     "gulp-csso": "^4.0.1",
     "gulp-debug": "^3.2.0",
     "gulp-less": "^5.0.0",
@@ -92,6 +92,7 @@
     "react-test-renderer": "^17.0.2",
     "sass": "^1.37.5",
     "style-loader": "^3.2.1",
+    "tailwindcss": "^2.2.7",
     "ts-jest": "^27.0.4",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5",
