--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "@egjs/react-flicking": "^3.7.3",
     "@graphql-codegen/typescript-urql": "^2.0.11",
     "@hcaptcha/react-hcaptcha": "^0.3.7",
-    "@next/bundle-analyzer": "^10.1.3",
+    "@mantine/core": "^2.3.1",
+    "@mantine/dates": "^2.3.1",
+    "@mantine/hooks": "^2.3.1",
+    "@mantine/notifications": "^2.3.1",
+    "@mantine/prism": "^2.3.1",
+    "@next/bundle-analyzer": "^10.2.3",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
     "@tanem/react-nprogress": "^3.0.75",
@@ -28,6 +33,7 @@
     "boring-avatars": "^1.5.8",
     "cleave.js": "^1.6.0",
     "date-fns": "^2.23.0",
+    "dayjs": "^1.10.6",
     "firebase": "^8.9.1",
     "firebase-admin": "^9.11.0",
     "firebaseui": "^5.0.0",
@@ -40,11 +46,13 @@
     "next-urql": "^3.1.1",
     "phosphor-react": "^1.3.1",
     "prettier": "^2.2.1",
+    "prism-react-renderer": "^1.2.1",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
     "react-css-theme-switcher": "^0.3.0",
     "react-dom": "17.0.2",
     "react-firebaseui": "^5.0.2",
+    "react-jss": "^10.7.1",
     "tailwindcss-line-clamp": "^1.0.5",
     "tailwindcss-tooltip-arrow-after": "^1.0.0",
     "urql": "^2.0.4",
