--- a/package.json
+++ b/package.json
@@ -28,8 +28,6 @@
     "@tailwindcss/typography": "^0.4.1",
     "@tanem/react-nprogress": "^3.0.75",
     "@urql/exchange-graphcache": "^4.2.1",
-    "antd": "^4.16.11",
-    "babel-plugin-import": "^1.13.3",
     "boring-avatars": "^1.5.8",
     "cleave.js": "^1.6.0",
     "date-fns": "^2.23.0",
@@ -53,6 +51,7 @@
     "react-dom": "17.0.2",
     "react-firebaseui": "^5.0.2",
     "react-jss": "^10.7.1",
+    "react-progressive-graceful-image": "^0.6.13",
     "tailwindcss-line-clamp": "^1.0.5",
     "tailwindcss-tooltip-arrow-after": "^1.0.0",
     "urql": "^2.0.4",
