--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@tailwindcss/typography": "^0.4.1",
     "@tanem/react-nprogress": "^3.0.75",
     "@urql/exchange-graphcache": "^4.2.1",
+    "axios": "^0.21.1",
+    "blurhash": "^1.1.4",
     "boring-avatars": "^1.5.8",
     "cleave.js": "^1.6.0",
     "date-fns": "^2.23.0",
@@ -35,8 +37,8 @@
     "firebase": "^8.9.1",
     "firebase-admin": "^9.11.0",
     "firebaseui": "^5.0.0",
+    "formidable": "^1.2.2",
     "graphql": "^15.5.1",
-    "imagekitio-react": "^1.0.11",
     "lightgallery": "^2.1.8",
     "next": "11.1.0",
     "next-firebase-auth": "^0.13.3-alpha.1",
@@ -48,11 +50,11 @@
     "prism-react-renderer": "^1.2.1",
     "react": "17.0.2",
     "react-beautiful-dnd": "^13.1.0",
-    "react-cloudimage-responsive": "^3.5.1",
-    "react-css-theme-switcher": "^0.3.0",
+    "react-blurhash": "^0.1.3",
     "react-dom": "17.0.2",
     "react-firebaseui": "^5.0.2",
     "react-jss": "^10.7.1",
+    "react-lazyload": "^3.2.0",
     "react-progressive-graceful-image": "^0.6.13",
     "tailwindcss-line-clamp": "^1.0.5",
     "tailwindcss-tooltip-arrow-after": "^1.0.0",
@@ -83,17 +85,9 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "gulp": "^4.0.2",
-    "gulp-csso": "^4.0.1",
-    "gulp-debug": "^3.2.0",
-    "gulp-less": "^5.0.0",
-    "gulp-postcss": "^9.0.0",
     "identity-obj-proxy": "^3.0.0",
     "iniparser": "^1.0.5",
     "jest": "^27.0.6",
-    "less": "^4.1.1",
-    "less-plugin-import": "^1.0.0",
-    "less-plugin-npm-import": "^2.1.0",
     "null-loader": "^4.0.1",
     "path": "^0.12.7",
     "postcss": "^8.3.6",
