Removed Dependencies, Added better image Loader and more

--- a/package.json
+++ b/package.json
@@ -12,8 +12,20 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
-    "@editorjs/footnotes": "^1.0.0",
-    "@editorjs/link-autocomplete": "0.0.0",
+    "@codexteam/ajax": "^4.2.0",
+    "@editorjs/checklist": "^1.3.0",
+    "@editorjs/code": "^2.7.0",
+    "@editorjs/editorjs": "^2.22.2",
+    "@editorjs/footnotes": "^1.1.0",
+    "@editorjs/header": "^2.6.1",
+    "@editorjs/inline-code": "^1.3.1",
+    "@editorjs/link-autocomplete": "^0.0.0",
+    "@editorjs/marker": "^1.2.2",
+    "@editorjs/nested-list": "^1.0.2",
+    "@editorjs/paragraph": "^2.8.0",
+    "@editorjs/quote": "^2.4.0",
+    "@editorjs/table": "^2.0.1",
+    "@editorjs/warning": "^1.2.0",
     "@egjs/flicking-plugins": "^4.2.0",
     "@egjs/react-flicking": "^3.7.3",
     "@graphql-codegen/typescript-urql": "^2.0.11",
@@ -27,6 +39,7 @@
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
     "@tanem/react-nprogress": "^3.0.75",
+    "@types/axios": "^0.14.0",
     "@urql/exchange-graphcache": "^4.2.1",
     "axios": "^0.21.1",
     "blurhash": "^1.1.4",
@@ -53,9 +66,10 @@
     "react-blurhash": "^0.1.3",
     "react-dom": "17.0.2",
     "react-firebaseui": "^5.0.2",
+    "react-image-and-background-image-fade": "^1.0.6",
     "react-jss": "^10.7.1",
     "react-lazyload": "^3.2.0",
-    "react-progressive-graceful-image": "^0.6.13",
+    "sharp": "^0.29.0",
     "tailwindcss-line-clamp": "^1.0.5",
     "tailwindcss-tooltip-arrow-after": "^1.0.0",
     "urql": "^2.0.4",
@@ -70,6 +84,7 @@
     "@types/jest": "^26.0.24",
     "@types/node": "^14.14.39",
     "@types/react": "^17.0.15",
+    "@types/sharp": "^0.28.5",
     "@types/validator": "^13.6.3",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
