--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,21 +22,21 @@ jobs:
       NEXT_PUBLIC_IMAGE_CDN_PATH: ${{ secrets.NEXT_PUBLIC_IMAGE_CDN_PATH }}
     steps:
       - uses: actions/checkout@v2
+      - name: Restore cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ github.workspace }}/.next/cache
+          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-${{ hashFiles('**.[jt]sx?') }}
+          restore-keys: |
+          ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json') }}-
       - name: Use Stable Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: "14.x"
+          node-version: "14.x"         
       - name: Install Dependencies
         run: npm install
       - name: Build App
         run: npm run build
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v1
-      # - name: Login to DockerHub
-      # uses: docker/login-action@v1
-      # with:
-      #   username: ${{ secrets.DOCKERHUB_USERNAME }}
-      #   password: ${{ secrets.DOCKERHUB_TOKEN }}
       - uses: mr-smithers-excellent/docker-build-push@v5
         name: Construct Image & Push to Docker Registry
         with:
