--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,24 +12,24 @@ jobs:
     # this job will only run if the PR has been merged
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
-    env:
-      FIREBASE_PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
-      COOKIE_SECRET_CURRENT: ${{ secrets.COOKIE_SECRET_CURRENT }}
-      COOKIE_SECRET_PREVIOUS: ${{ secrets.COOKIE_SECRET_PREVIOUS }}
-      NEXT_PUBLIC_API_KEY: ${{ secrets.NEXT_PUBLIC_API_KEY }}
-      BUCKET_URL: ${{ secrets.BUCKET_URL }}
-      BUCKET_KEY: ${{ secrets.BUCKET_KEY }}
-      NEXT_PUBLIC_IMAGE_CDN_PATH: ${{ secrets.NEXT_PUBLIC_IMAGE_CDN_PATH }}
+    # env:
+    #   FIREBASE_PRIVATE_KEY: ${{ secrets.FIREBASE_PRIVATE_KEY }}
+    #   COOKIE_SECRET_CURRENT: ${{ secrets.COOKIE_SECRET_CURRENT }}
+    #   COOKIE_SECRET_PREVIOUS: ${{ secrets.COOKIE_SECRET_PREVIOUS }}
+    #   NEXT_PUBLIC_API_KEY: ${{ secrets.NEXT_PUBLIC_API_KEY }}
+    #   BUCKET_URL: ${{ secrets.BUCKET_URL }}
+    #   BUCKET_KEY: ${{ secrets.BUCKET_KEY }}
+    #   NEXT_PUBLIC_IMAGE_CDN_PATH: ${{ secrets.NEXT_PUBLIC_IMAGE_CDN_PATH }}
     steps:
       - uses: actions/checkout@v2
-      - name: Use Stable Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: "14.x"
-      - name: Install Dependencies
-        run: npm install
-      - name: Build App
-        run: npm run build
+      # - name: Use Stable Node.js
+      #   uses: actions/setup-node@v2
+      #   with:
+      #     node-version: "14.x"
+      # - name: Install Dependencies
+      #   run: npm install
+      # - name: Build App
+      #   run: npm run build
       - uses: mr-smithers-excellent/docker-build-push@v5
         name: Construct Image & Push to Docker Registry
         with:
