--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,9 @@ on:
   pull_request:
     types: [closed]
 
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 16.x]
+    # strategy:
+    #   matrix:
+    #     node-version: [12.x, 14.x, 16.x]
 jobs:
   Push_Image:
     # this job will only run if the PR has been merged
@@ -36,11 +36,11 @@ jobs:
           image: codingbolt/app
           buildArgs: |
             FIREBASE_PRIVATE_KEY= ${{ secrets.FIREBASE_PRIVATE_KEY }}
-            COOKIE_SECRET_CURRENT: ${{ secrets.COOKIE_SECRET_CURRENT }}
-            COOKIE_SECRET_PREVIOUS: ${{ secrets.COOKIE_SECRET_PREVIOUS }}
-            NEXT_PUBLIC_API_KEY: ${{ secrets.NEXT_PUBLIC_API_KEY }}
-            BUCKET_URL: ${{ secrets.BUCKET_URL }}
-            BUCKET_KEY: ${{ secrets.BUCKET_KEY }}
+            COOKIE_SECRET_CURRENT= ${{ secrets.COOKIE_SECRET_CURRENT }}
+            COOKIE_SECRET_PREVIOUS= ${{ secrets.COOKIE_SECRET_PREVIOUS }}
+            NEXT_PUBLIC_API_KEY= ${{ secrets.NEXT_PUBLIC_API_KEY }}
+            BUCKET_URL= ${{ secrets.BUCKET_URL }}
+            BUCKET_KEY= ${{ secrets.BUCKET_KEY }}
           tags: latest
           registry: docker.io
           username: ${{ secrets.DOCKERHUB_USERNAME }}
