--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           image: codingbolt/app
           buildArgs: |
-            FIREBASE_PRIVATE_KEY= ${{ secrets.FIREBASE_PRIVATE_KEY }}
+            FIREBASE_PRIVATE_KEY= "${{ secrets.FIREBASE_PRIVATE_KEY }}"
             COOKIE_SECRET_CURRENT= ${{ secrets.COOKIE_SECRET_CURRENT }}
             COOKIE_SECRET_PREVIOUS= ${{ secrets.COOKIE_SECRET_PREVIOUS }}
             NEXT_PUBLIC_API_KEY= ${{ secrets.NEXT_PUBLIC_API_KEY }}
