--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,15 @@ jobs:
       NEXT_PUBLIC_IMAGE_CDN_PATH: ${{ secrets.NEXT_PUBLIC_IMAGE_CDN_PATH }}
     steps:
       - uses: actions/checkout@v2
+      - name: Create file
+        run: |
+        echo FIREBASE_PRIVATE_KEY= ${{ secrets.FIREBASE_PRIVATE_KEY }}                    > other.txt
+        echo COOKIE_SECRET_CURRENT= ${{ secrets.COOKIE_SECRET_CURRENT }}                 >> other.txt
+        echo COOKIE_SECRET_PREVIOUS= ${{ secrets.COOKIE_SECRET_PREVIOUS }}               >> other.txt
+        echo NEXT_PUBLIC_API_KEY= ${{ secrets.NEXT_PUBLIC_API_KEY }}                     >> other.txt
+        echo BUCKET_URL= ${{ secrets.BUCKET_URL }}                                       >> other.txt
+        echo BUCKET_KEY= ${{ secrets.BUCKET_KEY }}                                       >> other.txt
+        echo NEXT_PUBLIC_IMAGE_CDN_PATH= ${{ secrets.NEXT_PUBLIC_IMAGE_CDN_PATH }}       >> other.txt
       - name: Use Stable Node.js
         uses: actions/setup-node@v2
         with:
