--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,13 +24,13 @@ jobs:
       - uses: actions/checkout@v2
       - name: Create Env File
         run: |
-          echo FIREBASE_PRIVATE_KEY= ${{ secrets.FIREBASE_PRIVATE_KEY }}                    > other
-          echo COOKIE_SECRET_CURRENT= ${{ secrets.COOKIE_SECRET_CURRENT }}                 >> other
-          echo COOKIE_SECRET_PREVIOUS= ${{ secrets.COOKIE_SECRET_PREVIOUS }}               >> other
-          echo NEXT_PUBLIC_API_KEY= ${{ secrets.NEXT_PUBLIC_API_KEY }}                     >> other
-          echo BUCKET_URL= ${{ secrets.BUCKET_URL }}                                       >> other
-          echo BUCKET_KEY= ${{ secrets.BUCKET_KEY }}                                       >> other
-          echo NEXT_PUBLIC_IMAGE_CDN_PATH= ${{ secrets.NEXT_PUBLIC_IMAGE_CDN_PATH }}       >> other
+          echo FIREBASE_PRIVATE_KEY= ${{ secrets.FIREBASE_PRIVATE_KEY }}                    > other.txt
+          echo COOKIE_SECRET_CURRENT= ${{ secrets.COOKIE_SECRET_CURRENT }}                 >> other.txt
+          echo COOKIE_SECRET_PREVIOUS= ${{ secrets.COOKIE_SECRET_PREVIOUS }}               >> other.txt
+          echo NEXT_PUBLIC_API_KEY= ${{ secrets.NEXT_PUBLIC_API_KEY }}                     >> other.txt
+          echo BUCKET_URL= ${{ secrets.BUCKET_URL }}                                       >> other.txt
+          echo BUCKET_KEY= ${{ secrets.BUCKET_KEY }}                                       >> other.txt
+          echo NEXT_PUBLIC_IMAGE_CDN_PATH= ${{ secrets.NEXT_PUBLIC_IMAGE_CDN_PATH }}       >> other.txt
       # - name: Use Stable Node.js
       #   uses: actions/setup-node@v2
       #   with:
@@ -52,6 +52,8 @@ jobs:
           context: .
           push: true
           tags: codingbolt/app:latest
+          secret-files: |
+          "my_tokens=./other.txt"
       # - uses: mr-smithers-excellent/docker-build-push@v5
       #   name: Construct Image & Push to Docker Registry
       #   with:
