--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,13 @@ jobs:
           echo BUCKET_URL= ${{ secrets.BUCKET_URL }}                                       >> other.txt
           echo BUCKET_KEY= ${{ secrets.BUCKET_KEY }}                                       >> other.txt
           echo NEXT_PUBLIC_IMAGE_CDN_PATH= ${{ secrets.NEXT_PUBLIC_IMAGE_CDN_PATH }}       >> other.txt
+          echo FIREBASE_PRIVATE_KEY= ${{ secrets.FIREBASE_PRIVATE_KEY }}                    > .env
+          echo COOKIE_SECRET_CURRENT= ${{ secrets.COOKIE_SECRET_CURRENT }}                 >> .env
+          echo COOKIE_SECRET_PREVIOUS= ${{ secrets.COOKIE_SECRET_PREVIOUS }}               >> .env
+          echo NEXT_PUBLIC_API_KEY= ${{ secrets.NEXT_PUBLIC_API_KEY }}                     >> .env
+          echo BUCKET_URL= ${{ secrets.BUCKET_URL }}                                       >> .env
+          echo BUCKET_KEY= ${{ secrets.BUCKET_KEY }}                                       >> .env
+          echo NEXT_PUBLIC_IMAGE_CDN_PATH= ${{ secrets.NEXT_PUBLIC_IMAGE_CDN_PATH }}       >> .env
       # - name: Use Stable Node.js
       #   uses: actions/setup-node@v2
       #   with:
