--- a/package.json
+++ b/package.json
@@ -46,9 +46,7 @@
     "cleave.js": "^1.6.0",
     "date-fns": "^2.23.0",
     "dayjs": "^1.10.6",
-    "firebase": "^8.9.1",
-    "firebase-admin": "^9.11.0",
-    "firebaseui": "^5.0.0",
+    "firebase": "^9.0.1-2021730202621",
     "formidable": "^1.2.2",
     "graphql": "^15.5.1",
     "lightgallery": "^2.1.8",
@@ -64,7 +62,6 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-blurhash": "^0.1.3",
     "react-dom": "17.0.2",
-    "react-firebaseui": "^5.0.2",
     "react-image-and-background-image-fade": "^1.0.6",
     "react-jss": "^10.7.1",
     "react-lazyload": "^3.2.0",
