--- a/package.json
+++ b/package.json
@@ -38,9 +38,12 @@
     "@tailwindcss/typography": "^0.4.1",
     "@types/react": "^17.0.26",
     "@types/sharp": "^0.29.2",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
     "autoprefixer": "^10.3.6",
     "eslint": "^7.32.0",
     "eslint-config-next": "11.1.2",
+    "eslint-plugin-react": "^7.26.1",
     "postcss": "^8.3.8",
     "prisma": "^3.1.1",
     "tailwindcss": "^2.2.16",
