--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
+    "@next/bundle-analyzer": "^11.1.2",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
     "@testing-library/jest-dom": "^5.14.1",
@@ -68,6 +69,7 @@
     "jest": "^27.2.4",
     "jest-dom": "^4.0.0",
     "jest-watch-typeahead": "^1.0.0",
+    "next-plugin-bundle-stats": "^3.1.3",
     "postcss": "^8.3.8",
     "prisma": "^3.1.1",
     "rewire": "^5.0.0",
