--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@next/bundle-analyzer": "^11.1.2",
+    "@relative-ci/agent": "^2.1.0",
     "@tailwindcss/aspect-ratio": "^0.2.1",
     "@tailwindcss/typography": "^0.4.1",
     "@testing-library/jest-dom": "^5.14.1",
@@ -76,6 +77,7 @@
     "tailwindcss": "^2.2.16",
     "tailwindcss-line-clamp": "^1.0.5",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "webpack-stats-plugin": "^1.0.3"
   }
 }
